# FeadFowardNeuralNetwork

./: .gitignore  LICENSE  README.md  pyproject.toml
Package/: setup.py
Package/DNN/: FFN.py  __init__.py
Package/DNN.egg-info/: PKG-INFO  SOURCES.txt
src/: test.py
src/DNN/: Dense.py  FFN.py  __init__.py  actFunction.py
src/testCode/: test.py
